# aviary

./: .editorconfig  .env.dev  .env.example  .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  compose.override.yml  compose.yml  config.example.yaml  docker-compose.yml  pyproject.toml
admin/: Dockerfile  pyproject.toml
admin/app/: config.py  main.py
admin/app/routers/: agents.py  deployments.py  mcp.py  pages.py  policies.py  service_accounts.py  users.py  workflows.py
admin/app/routers/pages/: __init__.py  _templates.py  agents.py  mcp.py  service_accounts.py  users.py  workflows.py
admin/app/services/: agent_lifecycle.py  keycloak_client.py  scaling_service.py  supervisor_client.py
admin/app/static/: style.css
admin/app/templates/: agent_detail.html  agents.html  base.html  mcp_server_detail.html  service_accounts.html  user_detail.html  users.html  workflow_detail.html  workflows.html
admin/tests/: conftest.py  test_agents.py  test_deployments.py  test_policies.py
agent-supervisor/: Dockerfile  pyproject.toml
agent-supervisor/app/: assembly.py  auth.py  config.py  db.py  main.py  manifests.py  metrics.py  provisioning.py  redis_client.py  routing.py  scaling.py
agent-supervisor/app/auth/: dependencies.py  oidc.py
agent-supervisor/app/backends/: __init__.py  protocol.py
agent-supervisor/app/backends/_common/: k8s_client.py  keda.py
agent-supervisor/app/backends/eks_fargate/: backend.py
agent-supervisor/app/backends/eks_native/: backend.py
agent-supervisor/app/backends/k3s/: backend.py  identity.py  manifests.py  workspace.py
agent-supervisor/app/routers/: agents.py  deployments.py  namespaces.py  streaming.py
agent-supervisor/app/services/: identity.py  stream_service.py  vault_client.py
agent-supervisor/tests/: conftest.py  test_assembly.py  test_k3s_backend.py  test_metrics.py  test_publish_stream.py  test_routing.py  test_stream_lifecycle.py  test_vault_client.py  test_worker_auth.py  test_workspace_proxy.py
api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
controller/: Dockerfile  pyproject.toml
controller/app/: config.py  db.py  k8s.py  main.py
controller/app/routers/: agents.py  deployments.py  egress.py  namespaces.py  streaming.py
credential-proxy/: Dockerfile  pyproject.toml
egress-proxy/: Dockerfile  pyproject.toml
inference-router/: Dockerfile  pyproject.toml
local-infra/: .env.example  compose.yml
mcp-gateway/: entrypoint.sh  pyproject.toml
mcp-gateway/app/: config.py  main.py
mcp-gateway/app/auth/: oidc.py
mcp-gateway/app/mcp/: connection_pool.py  gateway_server.py
mcp-gateway/app/services/: acl.py  platform_servers.py  secret_injection.py  vault_client.py
mcp-gateway/config/: secret-injection.yaml
mcp-servers/: Dockerfile
proxy/: Caddyfile
runtime/: Dockerfile  Dockerfile.custom  package-lock.json  package.json  pyproject.toml
shared/: alembic.ini  pyproject.toml
shared/aviary_shared/: config_secrets.py  http.py  mcp_tools.py  naming.py  sse_events.py  vault.py  workflow_types.py
shared/aviary_shared/auth/: __init__.py  acl.py  claims.py  oidc.py  settings.py
shared/aviary_shared/db/: models.py  session.py
shared/aviary_shared/db/migrations/: env.py
shared/aviary_shared/db/migrations/versions/: 001_baseline.py  001_initial_schema.py  002_mcp_gateway.py  002_workflow_runs.py  003_drop_namespace_deployment_active.py  003_message_search.py  004_user_preferences.py  004_workflow_runtime_endpoint.py  005_drop_agent_category.py  006_workflow_root_run_id.py  007_workflow_sessions.py  008_drop_run_type.py
shared/aviary_shared/db/models/: __init__.py  agent.py  base.py  mcp.py  policy.py  service_account.py  session.py  user.py  workflow.py
(+508 files in other folders)
